--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-is": "^18.0.0",
     "react-transition-group": "^4.4.2"
   },
   "dependencies": {
